--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,6 @@
 name: rarevault_ecommerce
 description: "A new Flutter project."
+
 publish_to: "none"
 version: 1.0.0+1
 
@@ -8,9 +9,12 @@ environment:
 
 dependencies:
   flutter:
-    sdk: flutter
+    sdk: flutter  
 
+  iconsax: ^0.0.8
   cupertino_icons: ^1.0.8
+
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
