--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,10 @@ dependencies:
   cupertino_icons: ^1.0.8
 
   get: ^4.6.6
+  get_storage: ^2.1.1
   firebase_core: ^3.8.0
+  flutter_native_splash: ^2.4.3
+
 
 dev_dependencies:
   flutter_test:
